--- a/package.json
+++ b/package.json
@@ -15,17 +15,26 @@
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
-    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin-ts": "^1.6.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
-    "typescript": "^5"
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.3"
   }
 }
